# Lists-Items-Effects-Manipulator

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  LICENSE  PCH.h  Plugin.cpp  README.md  example.ini  vcpkg-configuration.json  vcpkg.json
cmake/: Plugin.h.in
cmake/ports/mergemapper/: portfile.cmake  vcpkg.json
cmake/ports/srell/: portfile.cmake  vcpkg.json
include/: Cache.h  Chance.h  Defs.h  FormFilters.h  Modifier.h  Runner.h  StringFilters.h  Traits.h
src/: Cache.cpp  Chance.cpp  Defs.cpp  FormFilters.cpp  Modifier.cpp  Runner.cpp  StringFilters.cpp  Traits.cpp
